[gd_scene load_steps=34 format=2]

[ext_resource path="res://RH2/Idle/rh2_idle_bas0001.png" type="Texture" id=1]
[ext_resource path="res://Script/RH2.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/DetectionPerso.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CollisionDouce.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/DeambuleControlle.tscn" type="PackedScene" id=8]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0005.png" type="Texture" id=9]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0006.png" type="Texture" id=10]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0000.png" type="Texture" id=11]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0004.png" type="Texture" id=12]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0002.png" type="Texture" id=13]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0003.png" type="Texture" id=14]
[ext_resource path="res://RH2/Marche/rh2_marche0000.png" type="Texture" id=15]
[ext_resource path="res://RH2/Idle/rh2_idle_bas0007.png" type="Texture" id=16]
[ext_resource path="res://RH/Dash/rh2_marche0000.png" type="Texture" id=18]
[ext_resource path="res://RH/Dash/rh2_marche0002.png" type="Texture" id=19]
[ext_resource path="res://RH2/Marche/rh2_marche0005.png" type="Texture" id=20]
[ext_resource path="res://RH2/Marche/rh2_marche0004.png" type="Texture" id=21]
[ext_resource path="res://RH2/Marche/rh2_marche0001.png" type="Texture" id=22]
[ext_resource path="res://RH/Dash/rh2_marche0003.png" type="Texture" id=23]
[ext_resource path="res://RH/Dash/rh2_marche0004.png" type="Texture" id=24]
[ext_resource path="res://RH/Dash/rh2_marche0005.png" type="Texture" id=25]
[ext_resource path="res://RH2/Marche/rh2_marche0003.png" type="Texture" id=26]
[ext_resource path="res://RH/Dash/rh2_marche0001.png" type="Texture" id=27]
[ext_resource path="res://RH2/Marche/rh2_marche0002.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 27 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": false,
"name": "Dash",
"speed": 12.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "Marche",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.99291, 6.01342 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.8712, 37.2865 )

[sub_resource type="CircleShape2D" id=4]
radius = 227.71

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.50002, 24.106 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.37289, 15.6645 )

[node name="RH2" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 36 )
shape = SubResource( 2 )

[node name="HurtBoxe" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBoxe" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_vie = 3

[node name="DetectionPerso" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="DetectionPerso" index="0"]
modulate = Color( 1, 1, 1, 0.313726 )
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="CollisionDouce" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="CollisionDouce" index="0"]
position = Vector2( 0, -9 )
shape = SubResource( 6 )

[node name="DeambuleControlle" parent="." instance=ExtResource( 8 )]

[node name="ProjectileTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="HurtBoxe" to="." method="_on_HurtBoxe_area_entered"]
[connection signal="vie_zero" from="Stats" to="." method="_on_Stats_vie_zero"]

[editable path="HurtBoxe"]

[editable path="DetectionPerso"]

[editable path="HitBox"]

[editable path="CollisionDouce"]
